miau (0.6.6) unstable; urgency=low

  * Fixed RPL_TOPICWHO syntax. Oops.
  * Fixed memory leak with channel keys.
  * Fixed chanlog/privlog with user's ACTION when DCC-bouncing is compiled in.
  * Fixed handling of NICK commands on servers running InspIRCD.
  * Cleaned up source.

 -- Tommi Saviranta <wnd@iki.fi>  Sun, 22 Aug 2010 11:50:36 +0300

miau (0.6.5) unstable; urgency=low

  * Fixed privmsg_format behaviour with channels
  * Fixed privmsg_format in documentation
  * privmsg_format without "%s" in it will no longer be accepted
  * Fixed potential memory leak in topic-handling (would leak with invalid
    replies from server)
  * Fixed several unsafe va_list calls.
  * Fixed parser not to crash on certain invalid lines in miaurc such as
    'password = foo + "bar"'.
  * Parser will now print only one error per erroneous line.
  * Changed featues enabled by default in configure.ac.
  * Added information about configure options to INSTALL.
  * Added miaurc option "qlog_no_my_quit" to suppress user's own QUIT messages
    when replaying quicklog.
  * Fixed qlog-to-inbox conversion with unresolved IPv6 addresses
  * Inbox format is not identical with and without qlog enabled...
  * Updated documentation about possible caveat with chandiscon.
  * Moved recent ChangeLog to debian/changelog

 -- Tommi Saviranta <wnd@iki.fi>  Tue, 23 Oct 2007 22:15:24 +0300

miau (0.6.4) unstable; urgency=low

  * Fixed crash with channel modes with parameter(s) missing [#1644967]
  * Fixed "nothing goes to inbox after updating to 0.6.3"
  * miau now understands Undernet-style PART messages [#1676231]
  * Option to disconnect clients upon connecting to server. Should help with
    server reconnect issues with mIRC and certain IRC networks such as
    Afternet. [#1673149]
  * Added option "privmsg_fmt". When multiple clients are attached, probably
    only the initiator of private chat will see the message flow correctly.