@@ -1,7 +1,5 @@
 Bugs:
 
-- privlog BEGINNING breaks with IPv6 and channels/nicks with a colon in it
-
 - Receive buffer is not cleared when connection is lost
 
 - QUIT is logged on every channel (ok fine it's a feature)
